[package]
name = "fans"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/retroctrl/fans/"
description = "Simple structures common to controlling fans"
keywords = ["embedded", "fan", "fans"]
license = "MPL-2.0"

[features]
default = []
defmt = ["dep:defmt"]
postcard = ["dep:postcard-schema", "dep:serde"]

[dependencies]
defmt = { version = "0.3", optional = true }
postcard-schema = { version = "0.2", features = ["derive"], optional = true }
serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }
