[workspace]
members = ["virtual-fan"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"

[package]
name = "fans"
version.workspace = true
edition.workspace = true
repository = "https://github.com/retroctrl/fans/"
description = "Simple structures common to controlling fans"
keywords = ["embedded", "fan", "fans"]
license.workspace = true

[features]
default = []
defmt = ["dep:defmt"]
postcard = ["dep:postcard-schema", "dep:serde"]

[dependencies]
defmt = { version = "0.3", optional = true }
postcard-schema = { version = "0.2", features = ["derive"], optional = true }
serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.17", default-features = false }
