[package]
name = "virtual-fan"
description = "Virtual fan driver for simulation and testing"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["embedded", "fan", "fans", "virtual-fan"]

[features]
default = ["log"]
defmt = ["dep:defmt"]
std = []
alloc = []
log = ["dep:log"]

[dependencies]
defmt = { version = "0.3.8", optional = true }
fans = { version = "0.3" }
log = { version = "0.4", optional = true }
thiserror = { version = "2", default-features = false }
